--- a/client/index.html
+++ b/client/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <h1>You're up and running good man!</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2>Want me to tell you you look good?</h2>
+    <button id = 'no'>No..</button>
+    <button id = 'yes'>Yes!</button>
+
+    <script src='index.js'></script>
 </body>
 </html>
