--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
     <button id = 'no'>No..</button>
     <button id = 'yes'>Yes!</button>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.4/axios.min.js"></script>
     <script src='index.js'></script>
 </body>
 </html>
